tests/rosetta/transpiler/Clojure/associative-array-merging.error
run error: exit status 1
WARNING: update already refers to: #'clojure.core/update in namespace: main, being replaced by: #'main/update
Execution error (ClassCastException) at main/merge (associative-array-merging.clj:17).
class clojure.lang.MapEntry cannot be cast to class java.lang.Number (clojure.lang.MapEntry is in unnamed module of loader 'app'; java.lang.Number is in module java.base of loader 'bootstrap')

Full report at:
/tmp/clojure-17554645905516002069.edn
